room detection feature delivered

--- a/index.html
+++ b/index.html
@@ -923,6 +923,10 @@
           <button id="share-canvas" class="tool-button tooltip" data-tooltip="Share Canvas">Share</button>
         </div>
 
+        <hr>
+
+        <button id="import-blueprint" class="tool-button tooltip" data-tooltip="Import Blueprint & Detect Rooms">📐 Blueprint</button>
+
         <div id="notifications-container"></div>
       </div>
 
